# apps/api/src/apps/auth/dto/auth-user.dto.ts
@@ -10,4 +10,7 @@ export class AuthUserDto implements AuthUser {
 
   @ApiProperty()
   email!: string;
+
+  @ApiProperty({ type: [String] })
+  roles!: string[];
 }
